# sound-morpher

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  main.py  pyproject.toml  requirements.txt  soundmorpher.spec
app/: audio_engine.py  bpm_engine.py  export.py  main_window.py  morph_engine.py  project_file.py  project_state.py
app/widgets/: fade_panel.py  overlap_panel.py  plugin_param_panel.py  recording_panel.py  sound_slot.py  spectrogram.py  step_grid.py  step_tile.py  timewarp_panel.py  trim_panel.py  volume_panel.py  waveform_widget.py
plugins/: base.py  crossfade.py  granular.py  griffin_lim.py  lpc_morph.py  pitch_shift.py  registry.py  spectral_fft.py  vocoder.py  world_vocoder.py
resources/: theme.qss
tests/: conftest.py  test_audio_engine.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
